Always use ghcup to install GHC and cabal

--- a/.github/workflows/github-page.yml
+++ b/.github/workflows/github-page.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         ghc: ["8.10.7"]
         os: [ubuntu-latest]
+        cabal: ["3.6.2.0"]
 
     steps:
     - uses: actions/checkout@v1
@@ -25,11 +26,15 @@ jobs:
     - name: Add build script path
       run: echo "$(pwd)/.github/bin" >> $GITHUB_PATH
 
-    - uses: haskell/actions/setup@v1
-      id: setup-haskell
-      with:
-        ghc-version: ${{ matrix.ghc }}
-        cabal-version: 3.6.2.0
+    - name: Home
+      run: echo "${{ env.HOME }}"
+
+    - name: Install Haskell tooling
+      run: |
+        ghcup install ghc   ${{ matrix.ghc   }}
+        ghcup set     ghc   ${{ matrix.ghc   }}
+        ghcup install cabal ${{ matrix.cabal }}
+        ghcup set     cabal ${{ matrix.cabal }}
 
     - name: Haskell versions
       run: |
